--- a/bmnd/app/src/main/AndroidManifest.xml
+++ b/bmnd/app/src/main/AndroidManifest.xml
@@ -9,14 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ConnexionActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ConnexionActivity" />
+        <activity android:name=".ProfilClient"
+            android:exported="true"
+            android:label="@string/MonCompte"
+            />
+        <activity android:name=".ModificationProfilClient"
+            android:label="@string/ModifierMesDonnes"
+            android:parentActivityName=".ProfilClient" />
+
     </application>
 
 </manifest>
